--- a/styles/_common.styl
+++ b/styles/_common.styl
@@ -42,3 +42,4 @@ code
     pre &
         display: block
         padding: 0.5rem 1rem
+        overflow: auto
